--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+h1 {
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 25px;
+}
+.wrapper {
+  display: flex;
+  position: absolute;
+  left: 38%;
+  top: 25vh !important;
+  flex-direction: column;
+  width: 25vw;
+  border: 1px solid grey;
+  padding: 20px 35px;
+  justify-content: space-around;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px grey;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.input-items {
+  margin-bottom: 10px;
+  font-size: 15px !important;
+  height: 35px;
+}
+.btn {
+  padding: 5px 7px;
+  text-align: center;
+  border: 1px solid black;
+  background-color: black;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.btn:hover {
+  background-color: #fff;
+  color: black;
+  cursor: pointer;
+}
+
+.inactive {
+  display: none;
+}
+.active {
+  display: block;
 }
